--- a/src/app/(website)/page.css
+++ b/src/app/(website)/page.css
@@ -541,7 +541,7 @@ body {
 @media screen and (max-width: 700px) {
 
   .intro {
-    margin-top: 100px;
+    margin-top: 40px;
     /* padding-bottom: 25vh; */
   }
   .intro h1 {
@@ -747,7 +747,7 @@ body {
   }
 
   .intro {
-    margin-top: 100px;
+    margin-top: 30px;
   }
   .intro h1 {
     font-size: 30px;
